src/index.css
/* :root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
} */

*, *::after, *::before{
  box-sizing: border-box;
}

body{
  font-size: 20px;
  font-family: Inter, sans-serif;
  background-color: #F5F7FB;
  position: relative;
  margin: 50px;
  min-height: 100vh;
}

div#root{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
}

.top-yellow-blob{
  width: 800px;
  opacity: 0.25;
  position: fixed;
  top:-500px;
  right:-350px;
}

.bot-yellow-blob{
  width: 800px;
  opacity: 0.15;
  position: fixed;
  bottom:-500px;
  left:-350px; 
  filter: invert(55%) sepia(100%) saturate(5000%) hue-rotate(180deg);
}

.first-page-title{
  font-size: 1.953125rem;
  font-weight: bold;
  color: #293264;
}

.first-page-desc{
  color: #293264;
}
.start-btn{
  color: #F5F7FB;
  background-color: #4D5B9E;
  border: none;
  border-radius: 15px;
  padding: 18px 65px;
  margin: 30px;
  cursor: pointer;
  font-size: 1rem;
  transition: all 0.15s ease
}
.start-btn:hover{
  background-color: darkblue; 
  cursor: pointer;
}

.start-btn:active{
  background-color: navy;  
  transform: scale(0.95);
}

legend{
  margin: 20px 0;
  color: #293264;
}

fieldset {
  border: none;
  height: 100px;     
  margin-top: 15px;        
  padding: 0;  
  border-bottom: 1px solid #DBDEF0;     
}

input[type="radio"] {
  display: none;
}

label{
  padding: 5px 10px;
  border: 1px solid #293264;
  color: #293264;
  margin: 30px 10px;
  border-radius: 10px;
  font-size: 0.9rem;
}

